# watch-II

./: .atom-build.yml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  code_notes.txt  imageconverter.py  install_libraries.sh  ir images  ir.json  partitions.csv  partitions_8mb.csv  poppyseed.c  readme.md  sdkconfig  sdkconfig.old  states.cpp  test.ino  the stupidest way to have a retargetable system.cpp
.github/workflows/: espidf-v4.0.1.yml
design_files/: 11.docx  readme.md
design_files/case/: watch2-case.scad
design_files/i2c_mic_breakout/: projects_are_a_bad_idea-B_Cu.gbl  projects_are_a_bad_idea-B_Mask.gbs  projects_are_a_bad_idea-B_Paste.gbp  projects_are_a_bad_idea-B_SilkS.gbo  projects_are_a_bad_idea-Edge_Cuts.gm1  projects_are_a_bad_idea-F_Cu.gtl  projects_are_a_bad_idea-F_Mask.gts  projects_are_a_bad_idea-F_Paste.gtp  projects_are_a_bad_idea-F_SilkS.gto  projects_are_a_bad_idea.drl
design_files/projects_are_a_bad_idea/: esp32_breadboard_breakout.kicad_pcb  fp-info-cache  projects_are_a_bad_idea.kicad_pcb  projects_are_a_bad_idea.kicad_pcb-bak  projects_are_a_bad_idea.pro  projects_are_a_bad_idea.sch-bak
design_files/watch2/: fp-info-cache  watch2  watch2-cache.lib  watch2.net  watch2.pro  watch2.sch  watch2.sch-bak  watch2.xml
design_files/watch2_board/: fp-info-cache  sym-lib-table  watch2 (copy).kicad_pcb  watch2-board-outline.kicad_pcb  watch2-cache.lib  watch2-rescue.lib  watch2-without-led-tab.kicad_pcb  watch2-without-led-tab.kicad_pcb-bak  watch2.csv  watch2.html  watch2.kicad_pcb  watch2.kicad_pcb-bak  watch2.net  watch2.pro  watch2.sch  watch2.sch-bak  watch2.xml
design_files/watch2_case/: adafruit_1.3_tft.stl  alps-switch.step  alps-switch.stl  watch2-case.scad
docs/: Setup_watch2.h  code backup  column width  credit  libraries  libraries.md  readme.md  watch2 height.txt
docs/html/: ArduinoOTA_8cpp_source.html  ArduinoOTA_8h_source.html  Arduino_8h_source.html  AsyncUDP_8cpp_source.html  AsyncUDP_8h_source.html  AzureIotHub_8cpp_source.html  AzureIotHub_8h_source.html  BLE2902_8cpp_source.html  BLE2902_8h_source.html  BLE2904_8cpp_source.html  BLE2904_8h_source.html  BLEAddress_8cpp_source.html  BLEAddress_8h_source.html  BLEAdvertisedDevice_8cpp_source.html  BLEAdvertisedDevice_8h_source.html  BLEAdvertising_8cpp_source.html  BLEAdvertising_8h_source.html  BLEBeacon_8cpp_source.html  BLEBeacon_8h_source.html  BLECharacteristicMap_8cpp_source.html  BLECharacteristic_8cpp_source.html  BLECharacteristic_8h_source.html  BLEClient_8cpp_source.html  BLEClient_8h_source.html  BLEDescriptorMap_8cpp_source.html  BLEDescriptor_8cpp_source.html  BLEDescriptor_8h_source.html  BLEDevice_8cpp_source.html  BLEDevice_8h_source.html  BLEEddystoneTLM_8cpp_source.html  BLEEddystoneTLM_8h_source.html  BLEEddystoneURL_8cpp_source.html  BLEEddystoneURL_8h_source.html  BLEExceptions_8cpp_source.html  BLEExceptions_8h_source.html  BLEHIDDevice_8cpp_source.html  BLEHIDDevice_8h_source.html  BLERemoteCharacteristic_8cpp_source.html  BLERemoteCharacteristic_8h_source.html  BLERemoteDescriptor_8cpp_source.html  (+853 more)
docs/latex/: CMakeLists_8txt.tex  annotated.tex  app__icons_8cpp.tex  coolcrab_8h.tex  dir_5c982d53a68cdbcd421152b4020263a9.tex  dir_836fa21f3a659992d2a1452fdb868a29.tex  dir_97ad31110072cd27d706f431aa8ab7c1.tex  dir_caa191a7d648d7703f06441b595b63ee.tex  files.tex  lato-regular-6_8h.tex  main_8cpp.tex  namespaces.tex  namespacewatch2.tex  refman.tex  regret_8h.tex  root__store_8cpp.tex  small__icons_8cpp.tex  sourcesanspro-light-12_8h.tex  sourcesanspro-light-16_8h.tex  sourcesanspro-light-24_8h.tex  sourcesanspro-light-6_8h.tex  sourcesanspro-light-8_8h.tex  sourcesanspro-regular-16_8h.tex  sourcesanspro-regular-20_8h.tex  sourcesanspro-regular-24_8h.tex  sourcesanspro-regular-6_8h.tex  sourcesanspro-regular-8_8h.tex  state__alarms_8cpp.tex  state__calc_8cpp.tex  state__image__viewer_8cpp.tex  state__init_8cpp.tex  state__ir__remote_8cpp.tex  state__music__player_8cpp.tex  state__notepad_8cpp.tex  state__quiz_8cpp.tex  state__sdtest_8cpp.tex  state__settings_8cpp.tex  (+14 more)
extras/: .~lock.pinout.xlsx#  Setup_watch2.h  a.out  blackjack.cpp  i2s mic samples  i2s mic samples scaled  imageconverter.py  pinout.txt  pinout.xlsx  readme.md
main/: CMakeLists.txt  component.mk  main.cpp  readme.md  regret.h  root_store.cpp  watch2.cpp  watch2.h  watch2_audio.cpp  watch2_battery.cpp  watch2_bluetooth.cpp  watch2_dialogues.cpp  watch2_drawing.cpp  watch2_files.cpp  watch2_images.cpp  watch2_system.cpp  watch2_utility.cpp  watch2_wifi.cpp
main/custom_fonts/: sourcesanspro-light-12.h  sourcesanspro-light-16.h  sourcesanspro-regular-6.h
main/icons/: app_icons.cpp  small_icons.cpp  small_icons.h
main/libraries/Arduino-IRremote/: boarddefs.h  irRecv.cpp
main/libraries/css-color-parser-cpp/: .gitignore  Makefile  fuzz.cpp  fuzz.sh  test.cpp
main/libraries/css-color-parser-cpp/input/: a  c  d  f
main/libraries/ds1337/: DS1337.cpp  DS1337.h
main/libraries/nofrendo/: CMakeLists.txt.old  config.c  log.c  log.h  memguard.c  memguard.h  nofrendo.c  nofrendo.h  osd.h  vid_drv.c
main/libraries/nofrendo/cpu/: dis6502.c  dis6502.h  nes6502.c
main/libraries/nofrendo/mappers/: map005.c  map024.c  map064.c  map085.c  map160.c  mapvrc.c
main/libraries/nofrendo/nes/: nes_mmc.c  nes_ppu.c  nes_rom.c  nesstate.c
main/states/: state_alarms.cpp  state_blackjack.cpp  state_bt_remote.cpp  state_calc.cpp  state_cube.cpp  state_image_viewer.cpp  state_init.cpp  state_ir_remote.cpp  state_music_player.cpp  state_nes.cpp  state_nes.h  state_notepad.cpp  state_quiz.cpp  state_radio.cpp  state_recorder.cpp  state_reddit.cpp  state_sdtest.cpp  state_sensor.cpp  state_settings.cpp  state_snek.cpp  state_state_menu.cpp  state_stopwatch.cpp  state_tetris.cpp  state_timer.cpp  state_watch_face.cpp  state_weather.cpp  state_wiki.cpp  states.cpp  states.h
spiffs/: SourceSansPro-Light12.vlw  SourceSansPro-Light7.vlw  SourceSansPro-Regular24.vlw  SourceSansPro-Regular36.vlw  SourceSansPro-Regular66.vlw  readme.md
watch2/: globals.h  watch2.h  watch2.ino
(+450 files in other folders)
